[gd_scene load_steps=9 format=3 uid="uid://dmpx7gyj5dh1p"]

[ext_resource type="Script" path="res://scenes/levels/base_level.gd" id="1_ei33j"]
[ext_resource type="PackedScene" uid="uid://drsd2pavas777" path="res://scenes/levels/replay.tscn" id="3_a3bw1"]
[ext_resource type="PackedScene" uid="uid://eif2kkm1ix8o" path="res://entities/enemies/enemy.tscn" id="4_defn8"]
[ext_resource type="PackedScene" uid="uid://dbd2mk0vi86r2" path="res://scenes/levels/set1/map1_1.tscn" id="4_i1jht"]
[ext_resource type="PackedScene" uid="uid://tvr1ag56rn38" path="res://entities/player/player.tscn" id="5_8mexq"]
[ext_resource type="PackedScene" uid="uid://8cp846uxapmw" path="res://ui/LevelStartText.tscn" id="6_grgpr"]
[ext_resource type="PackedScene" uid="uid://tfhwl8cjpl2v" path="res://ui/LevelEndText.tscn" id="7_nvn72"]
[ext_resource type="PackedScene" uid="uid://dji04lggosyfy" path="res://scenes/levels/LevelCamera.tscn" id="8_ii3ak"]

[node name="Level11" type="Node2D"]
script = ExtResource("1_ei33j")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StartingText" parent="UI" instance=ExtResource("6_grgpr")]

[node name="EndingText" parent="UI" instance=ExtResource("7_nvn72")]
offset_left = -232.5
offset_top = -41.5
offset_right = -232.5
offset_bottom = -41.5

[node name="Map1_1" parent="." instance=ExtResource("4_i1jht")]

[node name="Node2D" type="Node2D" parent="."]

[node name="Replay" parent="." node_paths=PackedStringArray("Entities") instance=ExtResource("3_a3bw1")]
Entities = NodePath("../Actors")

[node name="Actors" type="Node2D" parent="."]

[node name="Enemy" parent="Actors" instance=ExtResource("4_defn8")]
position = Vector2(576, 344)

[node name="Enemy2" parent="Actors" instance=ExtResource("4_defn8")]
position = Vector2(576, 144)
rotation = 3.14159

[node name="Player" parent="Actors" instance=ExtResource("5_8mexq")]
position = Vector2(272, 320)

[node name="LevelCamera" parent="." node_paths=PackedStringArray("player", "level") instance=ExtResource("8_ii3ak")]
player = NodePath("../Actors/Player")
level = NodePath("../Map1_1")

[connection signal="player_entered_end" from="Map1_1" to="." method="on_player_entered_end"]
